--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ NEXT_PUBLIC_DMCA_URL=https://www.dmca.com
 NEXT_PUBLIC_POSTHOG_KEY=phc_xxx
 NEXT_PUBLIC_POSTHOG_HOST=https://ph.acme.com
 NEXT_PUBLIC_POSTHOG_UI_HOST=https://us.i.posthog.com
+
+# https://dashboard.openpanel.dev/ncdai/chanhdaicom/settings/clients
+NEXT_PUBLIC_OPENPANEL_CLIENT_ID=
