fix(coderabbit): update path filters to include additional directories

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -2,5 +2,7 @@
 language: "en-US"
 reviews:
   path_filters:
+    - "!.agents/**"
     - "!.claude/**"
     - "!.cursor/**"
+    - "!.github/skills/**"
