refactor(github-contributions): use environment variable for contributions API URL

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ REGISTRY_NAMESPACE_URL=https://acme.com/r/{name}.json
 # https://github.com/settings/tokens
 GITHUB_API_TOKEN=
 
+# https://github.com/grubersjoe/github-contributions-api
+GITHUB_CONTRIBUTIONS_API_URL=https://github-contributions-api.jogruber.de
+
 # https://www.dmca.com/ProtectionPro.aspx
 NEXT_PUBLIC_DMCA_URL=https://www.dmca.com
 
