--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "fumadocs-core": "^16.0.0",
+    "fumadocs-core": "^16.6.3",
+    "fumadocs-typescript": "^5.1.3",
     "geist": "^1.7.0",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "jotai": "^2.12.5",
     "libphonenumber-js": "^1.12.4",
     "lucide-react": "^0.544.0",
@@ -82,6 +84,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@toolwind/corner-shape": "0.0.8-3",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/hast": "^3.0.4",
     "@types/node": "^20.14.12",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
@@ -103,6 +106,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-mdx": "^3.1.0",
+    "remark-rehype": "^11.1.2",
     "rimraf": "^6.0.1",
     "shadcn": "3.6.3",
     "shiki": "1.9.1",
@@ -122,5 +126,5 @@
     "node": "22.x",
     "pnpm": ">=9"
   },
-  "packageManager": "pnpm@10.23.0"
+  "packageManager": "pnpm@10.30.1"
 }
