feat: add ncdai-writing-component-docs skill and update component descriptions
- Introduced a new skill for writing and reviewing component documentation.
- Updated descriptions for various components in the registry to enhance clarity and consistency, including:
  - Apple Hello Effect
  - Code Block Command
  - Consent Manager
  - GitHub Stars
  - Scroll Fade Effect
  - Shimmering Text
  - Slide to Unlock
  - Testimonial
  - Testimonials Marquee
  - Text Flip
  - Theme Switcher
  - Work Experience

--- a/public/r/apple-hello-effect.json
+++ b/public/r/apple-hello-effect.json
@@ -3,7 +3,7 @@
   "name": "apple-hello-effect",
   "title": "Apple Hello Effect",
   "author": "ncdai <dai@chanhdai.com>",
-  "description": "Create a Xin chào and Hello writing effect inspired by Apple using Motion for React.",
+  "description": "SVG writing animation inspired by Apple's Hello screen.",
   "dependencies": [
     "motion"
   ],
